@@ -21,6 +21,8 @@ Changes log
          StringRepresentation class.
        - Added constructors to ClientResource taking only a request
          object (prototype) and no (last) response.
+       - Added EmfRepresentation#createEmfXmlResource(...) method
+         and write(EObject, OutputStream) method.
     - Misc
        - Updated XStream to version 1.4.1
        - Updated Jettison to version 1.3
